2005-10-20  James Turner  <james@worldforge.org>

	* Eris/View.cpp, Eris/View.h, Eris/Account.cpp, Eris/Account.h,
	  Eris/Avatar.cpp, Eris/Connection.cpp, Eris/Entity.h, Eris/Entity.cpp, 
	  Eris/EntityRouter.cpp, Eris/Factory.h, Eris/IGRouter.cpp,
	  Eris/TypeBoundRedispatch.cpp, Eris/TypeBoundRedispatch.h, 
	  Eris/TypeInfo.cpp, Eris/TypeService.cpp, Eris/TypeService.h:
	  switch to using RootOperation / RootEntity exclusively, and hence
	  avoid installing any custom factories at all.
	  
	* test/agent.cpp, test/clientConnection.cpp, test/clientConnection.h,
	  test/commander.cpp, test/controller.cpp, test/controller.h, 
	  test/setupHelpers.cpp, test/setupHelpers.h, test/tests.cpp,
	  test/stubServer.cpp, test/stubServer.h:
	  Add tests for creating a character and for attempting
	  character creation with an invalid type.

2005-10-19  James Turner  <james@worldforge.org>

	* Eris/View.cpp: deal with the scenario where a look-queued entity
	  disappears and then re-appears prior to the LOOK being issued.
	  
	* Eris/IGRouter.cpp, Eris/EntityRouter.cpp, Eris/IGRouter.h,
	  Eris/EntityRouter.h, Eris/Account.cpp: switching to using classNos for 
	  most decoding, and use TypeInfos in a few critical places. This replaces
	  many uses of smart_dynamic_cast.
	  
	* Eris/TypeService.cpp: make verification more robust, by ensuring the
	  local TypeInfo node is fully bound.

	* test/signalHelpers.h, test/tests.cpp: extend the action tests to
	  try with a custom op type.

	* test/stubServer.cpp: expand the type heirarchy on the stub server, so
	  it correctly satisifies all type requests from Eris.

2005-10-17  James Turner  <james@worldforge.org>

	* Eris/View.cpp, Eris/View.h: add in throttling of the rate at which
	  we request entities from the server (LOOKs). For the moment a very
	  crude metric is used to control the throttle, this can and will be
	  tuned (potentially dynamically).

	* test/setupHelpers.cpp: add a timeout to the AvatarGetter, in case